metadataPackage_1602884205764/objects/ClaimEvent_8__e.object
<CustomObject>
    <description>Omni Claim Event Parallel Bus</description>
    <label>Claim Event 8</label>
    <pluralLabel>Claim Event 8</pluralLabel>
    <fields>
        <fullName>AccidentBenefitFieldAdjUserId__c</fullName>
        <label>AccidentBenefitFieldAdjUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addresses__c</fullName>
        <label>Addresses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentPartyId__c</fullName>
        <label>AgentPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraisalAppointmentDate__c</fullName>
        <label>AppraisalAppointmentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppraisalAppointmentTime__c</fullName>
        <label>AppraisalAppointmentTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraisalQualifier__c</fullName>
        <label>AppraisalQualifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraisalTaskStatus__c</fullName>
        <label>AppraisalTaskStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraiserPartyId__c</fullName>
        <label>AppraiserPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedDriverPartyId__c</fullName>
        <label>AssignedDriverPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedLossDriverId__c</fullName>
        <label>AssignedLossDriverId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedUserId__c</fullName>
        <label>AssignedUserId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedVehicleId__c</fullName>
        <label>AssignedVehicleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoPhysicalDmgFieldAdjUserId__c</fullName>
        <label>AutoPhysicalDmgFieldAdjUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchReferenceNumber__c</fullName>
        <label>BranchReferenceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CauseOfLoss__c</fullName>
        <label>CauseOfLoss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimClosedDate__c</fullName>
        <label>ClaimClosedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimContractEffectiveDate__c</fullName>
        <label>ClaimContractEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimContractExpiryDate__c</fullName>
        <label>ClaimContractExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimDeductibleAmountCurrencyCode__c</fullName>
        <label>ClaimDeductibleAmountCurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimDeductibleAmount__c</fullName>
        <label>ClaimDeductibleAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClaimExposuresCount__c</fullName>
        <label>ClaimExposuresCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClaimExposures__c</fullName>
        <label>ClaimExposures</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClaimId__c</fullName>
        <label>ClaimId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimLOBGroup__c</fullName>
        <label>ClaimLOBGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimLOB__c</fullName>
        <label>ClaimLOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimNumberReplaced__c</fullName>
        <label>ClaimNumberReplaced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimNumber__c</fullName>
        <label>ClaimNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimOpenedDate__c</fullName>
        <label>ClaimOpenedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimOriginEffectiveDate__c</fullName>
        <label>ClaimOriginEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimReopenedDate__c</fullName>
        <label>ClaimReopenedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimStatus__c</fullName>
        <label>ClaimStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientPIN__c</fullName>
        <label>ClientPIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversionOrigin__c</fullName>
        <label>ConversionOrigin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamageRepairPartyId__c</fullName>
        <label>DamageRepairPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfLoss__c</fullName>
        <label>DateOfLoss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA__c</fullName>
        <label>DEA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrivingLicenses__c</fullName>
        <label>DrivingLicenses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <label>Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>EventName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTime__c</fullName>
        <label>EventTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTrackingNumber__c</fullName>
        <label>EventTrackingNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventVersion__c</fullName>
        <label>EventVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialTransactionsCount__c</fullName>
        <label>FinancialTransactionsCount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinancialTransactions__c</fullName>
        <label>FinancialTransactions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeneralLiabilityFieldAdjUserId__c</fullName>
        <label>GeneralLiabilityFieldAdjUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentAddressLine__c</fullName>
        <label>IncidentAddressLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentCity__c</fullName>
        <label>IncidentCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentCountry__c</fullName>
        <label>IncidentCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentDateReported__c</fullName>
        <label>IncidentDateReported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentDescription__c</fullName>
        <label>Incident Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncidentPostalCode__c</fullName>
        <label>IncidentPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentProvince__c</fullName>
        <label>IncidentProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentReportOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncidentReportOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InformationSensitivity__c</fullName>
        <label>InformationSensitivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialGrossEstimateAmount__c</fullName>
        <label>InitialGrossEstimateAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InitialGrossEstimateCurrency__c</fullName>
        <label>InitialGrossEstimateCurrency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InjuredParty__c</fullName>
        <label>InjuredParty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InjuriesInvolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InjuriesInvolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InsuredIncCustodianPartyId__c</fullName>
        <label>InsuredIncCustodianPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuredIncDriverPartyId__c</fullName>
        <label>InsuredIncDriverPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuredPartyId__c</fullName>
        <label>InsuredParty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuredProbableFaultPercentage__c</fullName>
        <label>InsuredProbableFaultPercentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastOpenedNonBIExposureId__c</fullName>
        <label>LastOpenedNonBIExposureId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiabilityConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LiabilityConfirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LossVehicleId__c</fullName>
        <label>LossVehicleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManuallyEnteredPolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManuallyEnteredPolicy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NLPClaimSectionAPaidThirdParty__c</fullName>
        <label>NLPClaimSectionAPaidThirdParty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLPLExposureId__c</fullName>
        <label>NLPLExposureId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonCasualtyCoverageInQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NonCasualtyCoverageInQuestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonCasualtyWithoutPrejudice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NonCasualtyWithoutPrejudice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartyCount__c</fullName>
        <label>PartyCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartyRolesCount__c</fullName>
        <label>PartyRolesCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartyRoles__c</fullName>
        <label>PartyRoles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <label>Party</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phones__c</fullName>
        <label>Phones</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoliceReportNumber__c</fullName>
        <label>PoliceReportNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyIssuingGroup__c</fullName>
        <label>PolicyIssuingGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyNumber__c</fullName>
        <label>PolicyNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAdjuster__c</fullName>
        <label>PrimaryAdjuster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyFieldAdjUserId__c</fullName>
        <label>PropertyFieldAdjUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvinceOfIssuanceId__c</fullName>
        <label>ProvinceOfIssuanceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLNClaimExpVehicleChapAPaid__c</fullName>
        <label>QCLNClaimExpVehicleChapAPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLNClaimExpVehicleChapBPaid__c</fullName>
        <label>QCLNClaimExpVehicleChapBPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLNExposureId__c</fullName>
        <label>QCLNExposureId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecoveryAdjUserId__c</fullName>
        <label>RecoveryAdjUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalCompanyPartyId__c</fullName>
        <label>RentalCompanyPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalContractStatus__c</fullName>
        <label>RentalContractStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalLimit__c</fullName>
        <label>RentalLimit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalNumberOfAuthorizedDays__c</fullName>
        <label>RentalNumberOfAuthorizedDays</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SellingChannelDistributionChannel__c</fullName>
        <label>SellingChannelDistributionChannel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingChannelDistributorNumber__c</fullName>
        <label>SellingChannelDistributorNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendAutoPropertySurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendAutoPropertySurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalIndemnity__c</fullName>
        <label>TotalIndemnity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLoss__c</fullName>
        <label>TotalLoss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalRecovery__c</fullName>
        <label>TotalRecovery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <label>TransactionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfLoss__c</fullName>
        <label>TypeOfLoss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderWritingCompanyNumber__c</fullName>
        <label>UnderWritingCompanyNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleLocationNote__c</fullName>
        <label>VehicleLocationNote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicles__c</fullName>
        <label>Vehicles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VirtualAppraisal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VirtualAppraisal</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>